fixed bug with ru-en papers

--- a/ru/_posts/2014-01-14-about-zshrc.html
+++ b/ru/_posts/2014-01-14-about-zshrc.html
@@ -1,5 +1,6 @@
 ---
 category: ru
+type: paper
 layout: paper
 last: 14 January 2014
 tags: zshrc, настройка, linux
@@ -403,4 +404,4 @@ hash -d u2=/mnt/usbdev2</pre>
 <p align="justify"><a href="/resources/screenshots/zshrc_demo.png"><img src="/resources/preview/zshrc_demo_prev.jpg"></a></p>
 
 <h3><a name="file" class="anchor" href="#file"><span class="octicon octicon-link"></span></a>Файл</h2>
-<p align="justify"><a href="https://raw.github.com/arcan1s/dotfiles/master/zshrc"></a>Мой <code>.zshrc</code>.</p>
+<p align="justify"><a href="https://raw.github.com/arcan1s/dotfiles/master/zshrc">Мой</a> <code>.zshrc</code>.</p>
