--- a/ru/index.html
+++ b/ru/index.html
@@ -19,7 +19,7 @@ title: arcanis
       <section>
 
 <h3><a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Добро пожаловать</h3>
-<p align="justify">Добро пожаловать на мою домашнюю страничку, <code>`echo $USERNAME`</code>. Обо мне вы можете прочитать по <a href="/ru/about">ссылке</a>. К сожалению, я не знаю html/php/ruby/прочее (но я знаю Google-фу! По крайней мере, я так думаю), поэтому эта страничка может выглядеть не очень красиво. Но я старался (ну или не совсем). В блоге я буду писать какие-нибудь статьи о науке, программировании, проживании в Archlinux и, может быть, о сопровождении пакетов. Также я создам странички для некоторых из <a href="https://github.com/arcan1s">моих проектов</a>.</p>
+<p align="justify">Добро пожаловать на мою домашнюю страничку, <code>`echo $USERNAME`</code>. Обо мне Вы можете прочитать по <a href="/ru/about">ссылке</a>. К сожалению, я не знаю html/php/ruby/прочее (но я знаю Google-фу! По крайней мере, я так думаю), поэтому эта страничка может выглядеть не очень красиво. Но я старался (ну или не совсем). В блоге я буду писать какие-нибудь статьи о науке, программировании, проживании в Archlinux и, может быть, о сопровождении пакетов. Также я создам странички для некоторых из <a href="https://github.com/arcan1s">моих проектов</a>.</p>
 
 <h3><a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Контакты</h3>
 <p align="justify">Если у Вас есть вопрос или что-нибудь еще, Вы можете <a href="/about">связаться со мной</a>. Если Вы хотите предложить пул-реквест или сообщить о баге для этих страничек, не стесняйтесь посетить <a href="https://github.com/arcan1s">мой профиль на GitHub</a> и сделать это.</p>
