--- a/ru/about.html
+++ b/ru/about.html
@@ -17,7 +17,7 @@ title: Обо мне
         PGP: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01">0x31361F01</a></p>
 
         <h2>Контакты</h2>
-        <p class="view">Алиас: arcanis/arcan1s<br>
+        <p class="view">Никнейм: arcanis/arcan1s<br>
         IRC: <a href="irc://irc.freenode.net/arcan1s">arcan1s</a><br>
         ICQ: 407-398-235<br>
         Jabber: arcanis (at) jabber (dot) ru<br>
