--- a/ru/authors.html
+++ b/ru/authors.html
@@ -22,6 +22,8 @@ Evgeniy Alekseev wrote this file. As long as you retain this notice you can do w
 
 <p align="justify">Блок комментариев был создан <a href="https://github.com/izuzak/izuzak.github.com">Ivan Žužak</a> и лицензирован под <a href="http://opensource.org/licenses/MIT">MIT</a> License.</p>
 
+<p align="justify">Код для спойлеров был предложен <a href="http://www.cyberforum.ru/post5368179.html">markeley</a>, и, судя по всему, он не имеет никакой лицензии.</p>
+
 <p align="justify">Данный сайт использует:
 <ul>
   <li><a href="http://jekyllrb.com/">Jekyll</a>, который лицензирован под <a href="http://opensource.org/licenses/MIT">MIT</a> License</li>
