--- a/projects/oblikuestrategies.html
+++ b/projects/oblikuestrategies.html
@@ -36,21 +36,29 @@ links:
 <ul>
   <li><p align="justify">Download an <a href="https://github.com/arcan1s/oblikuestrategies/releases">archive</a> with latest version of source files.</p></li>
   <li><p align="justify">Extract it and install the application. For global isntallation type:</p>
-<pre>cd /where/is/applet/
+{% highlight bash %}
+cd /where/is/applet/
 mkdir build && cd build
 cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --prefix` -DCMAKE_BUILD_TYPE=Release ../
 make
-sudo make install</pre>
+sudo make install
+{% endhighlight %}
 <p align="justify">For local isntallation type:</p>
-<pre>cd /where/is/applet/
+{% highlight bash %}
+cd /where/is/applet/
 mkdir build && cd build
 cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --localprefix` -DCMAKE_BUILD_TYPE=Release ../
 make
-make install</pre></li>
+make install
+{% endhighlight %}</li>
   <li><p align="justify">Restart plasma to load the applet:</p>
-<pre>kquitapp plasma-desktop && sleep 2 && plasma-desktop</pre>
+{% highlight bash %}
+kquitapp plasma-desktop && sleep 2 && plasma-desktop
+{% endhighlight %}
 <p align="justify">Also you might need to run <code>kbuildsycoca4</code> in order to get the <code>*.desktop</code> file recognized:</p>
-<pre>kbuildsycoca4 &> /dev/null</pre></li>
+{% highlight bash %}
+kbuildsycoca4 &> /dev/null
+{% endhighlight %}</li>
 </ul>
 
 <h3><a name="dependencies" class="anchor" href="#dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h3>
