--- a/ru/about.html
+++ b/ru/about.html
@@ -36,7 +36,9 @@ The Trusted User (TU) is a member of the community charged with keeping the AUR 
 <p align="right">&copy; <a href="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines">ArchWiki</a></p>
 
 <p align="justify">Вся контактная информация может быть найдена слева. Не стесняйтесь связываться со мной по любому вопросу (если что - пошлю). Ах да, чуть не забыл. Если Вы будете писать мне через ICQ или Jabber, Вы должны корректно ответить на вопрос антиспам бота. Вопрос:</p>
-<pre><code>int i = 1;
+{% highlight c %}
+int i = 1;
 i = ++i + ++i;
-return i;</code></pre>
+return i;
+{% endhighlight %}
 <p align="justify">Правильный ответ <code>5</code> (или <code>6</code>, как больше нравится).</p>
