--- a/ru/authors.html
+++ b/ru/authors.html
@@ -15,25 +15,20 @@ title: Авторы
 
 <p align="justify">Код и контент данного сайта лицензирован под <a href="http://people.freebsd.org/~phk">Beerware</a>:</p>
 <blockquote><p align="justify">"THE BEER-WARE LICENSE" (Revision 42):<br>
-Evgeniy Alekseev wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return</p></blockquote>
+Evgeniy Alekseev wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return.</p></blockquote>
 <p align="justify">(Ну, в общем, там про пиво говорится. Запомните, Вы должны мне пиво.)</p>
 
-<p align="justify">Исходная тема была создана <a href="https://github.com/orderedlist/minimal">Steve Smith</a> и лицензирована под <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution-ShareAlike 3.0 Unported</a> License.</p>
-
-<p align="justify">Блок комментариев был создан <a href="https://github.com/izuzak/izuzak.github.com">Ivan Žužak</a> и лицензирован под <a href="http://opensource.org/licenses/MIT">MIT</a> License.</p>
-
-<p align="justify">Код для спойлеров был предложен <a href="http://www.cyberforum.ru/post5368179.html">markeley</a>, и, судя по всему, он не имеет никакой лицензии.</p>
-
-<p align="justify">Данный сайт использует:
-<ul>
-  <li><a href="http://jekyllrb.com/">Jekyll</a>, который лицензирован под <a href="http://opensource.org/licenses/MIT">MIT</a> License</li>
-</ul></p>
-
-<p align="justify">Google Custom Search имеет собственную <a href="https://support.google.com/customsearch/answer/1714300">лицензию</a>.</p>
-
-<p align="justify">Sharethis тоже имеет собственную <a href="http://www.sharethis.com/legal/publisher-terms-of-use">лицензию</a>.</p>
-
-<p align="justify"><a href="https://www.redhat.com/promo/fonts/">Liberation font</a> лицензирован под <a href="http://scripts.sil.org/OFL">The SIL Open Font</a> License.</p>
+<p align="justify">This site uses:
+  <ul>
+    <li><a href="http://jekyllrb.com/">Jekyll</a>, который лицензирован под лицензией <a href="http://opensource.org/licenses/MIT">MIT</a>.</li>
+    <li>Исходная тема была создана <a href="https://github.com/orderedlist/minimal">Steve Smith</a> и лицензирована под <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</li>
+    <li>Блок комментариев был создан <a href="https://github.com/izuzak/izuzak.github.com">Ivan Žužak</a> и лицензирован под лицензией <a href="http://opensource.org/licenses/MIT">MIT</a>.</li>
+    <li>Код для спойлеров был предложен <a href="http://www.cyberforum.ru/post5368179.html">markeley</a>, и, судя по всему, он не имеет никакой лицензии.</li>
+    <li>Google Custom Search имеет собственную <a href="https://support.google.com/customsearch/answer/1714300">кастомную лицензию</a>.</li>
+    <li>Sharethis тоже имеет собственную <a href="http://www.sharethis.com/legal/publisher-terms-of-use">кастомную лицензию</a>.</li>
+    <li><a href="https://www.redhat.com/promo/fonts/">Liberation font</a> лицензирован под <a href="http://scripts.sil.org/OFL">The SIL Open Font License</a>.</li>
+  </ul>
+</p>
 
 <p align="justify">Отдельное спасибо <a href="http://monztruo.deviantart.com/">Monztruo</a>, я позаимствовал у него <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946">иконку</a>.</p>
 
