--- a/_posts/2014-01-14-about-zshrc.html
+++ b/_posts/2014-01-14-about-zshrc.html
@@ -11,20 +11,25 @@ commentIssueId: 5
 ---
 <h3><a name="prepare" class="anchor" href="#prepare"><span class="octicon octicon-link"></span></a>Prepare</h2>
 <p align="justify">First install recommended minima:</p>
-<pre>pacman -Sy pkgfile zsh zsh-completions zsh-syntax-highlighting</pre>
+{% highlight bash %}
+pacman -Sy pkgfile zsh zsh-completions zsh-syntax-highlighting
+{% endhighlight %}
 <p align="justify"><a href="https://www.archlinux.org/packages/pkgfile/">pkgfile</a> is a very useful utility. Also this command will install shell, additional completion and syntax highlighting.</p>
 
 <h3><a name="configuration" class="anchor" href="#configuration"><span class="octicon octicon-link"></span></a>Shell configuration</h2>
 <p align="justify">All options are avaible <a href="http://zsh.sourceforge.net/Doc/Release/Options.html">here</a>.</p>
 
 <p align="justify">Set history file and number of commands in cache of the current session and in the history file:</p>
-<pre># history
+{% highlight bash %}
+# history
 HISTFILE=~/.zsh_history
 HISTSIZE=500000
-SAVEHIST=500000</pre>
+SAVEHIST=500000
+{% endhighlight %}
 
 <p align="justify">I can not remember all <code>Ctrl+</code> combinations so I bind keys to its default usages:</p>
-<pre># bindkeys
+{% highlight bash %}
+# bindkeys
 bindkey '^[[A'  up-line-or-search        # up arrow for back-history-search
 bindkey '^[[B'  down-line-or-search      # down arrow for fwd-history-search
 bindkey '\e[1~' beginning-of-line        # home
@@ -32,59 +37,85 @@ bindkey '\e[2~' overwrite-mode           # insert
 bindkey '\e[3~' delete-char              # del
 bindkey '\e[4~' end-of-line              # end
 bindkey '\e[5~' up-line-or-history       # page-up
-bindkey '\e[6~' down-line-or-history     # page-down</pre>
+bindkey '\e[6~' down-line-or-history     # page-down
+{% endhighlight %}
 <p align="justify">But in this case <code>Up</code>/<code>Down</code> arrows are used to navigate through the history based on <b>already entered part</b> of a command. And <code>PgUp</code>/<code>PgDown</code> <b>will ignore</b> already entered part of a command.</p>
 
 <p align="justify">Command autocomplete:</p>
-<pre># autocomplete
+{% highlight bash %}
+# autocomplete
 autoload -U compinit
 compinit
 zstyle ':completion:*' insert-tab false
-zstyle ':completion:*' max-errors 2</pre>
+zstyle ':completion:*' max-errors 2
+{% endhighlight %}
 <p align="justify">Full command autocomplete will be enabled. <code>insert-tab false</code> will enable autocomplete for <b>non-entered</b> commands. <code>max-errors</code> sets maximum number of errors that could be corrected.</p>
 
 <p align="justify">Prompt:</p>
-<pre># promptinit
+{% highlight bash %}
+# promptinit
 autoload -U promptinit
-promptinit</pre>
+promptinit
+{% endhighlight %}
 
 <p align="justify">Enable colors:</p>
-<pre># colors
+{% highlight bash %}
+# colors
 autoload -U colors
-colors</pre>
+colors
+{% endhighlight %}
 
 <p align="justify">Here are some other options.</p>
 <p align="justify">Change directory without <code>cd</code>:</p>
-<pre># autocd
-setopt autocd</pre>
+{% highlight bash %}
+# autocd
+setopt autocd
+{% endhighlight %}
 <p align="justify">Correcting of typos (and question template):</p>
-<pre># correct
+{% highlight bash %}
+# correct
 setopt CORRECT_ALL
-SPROMPT="Correct '%R' to '%r' ? ([Y]es/[N]o/[E]dit/[A]bort) "</pre>
+SPROMPT="Correct '%R' to '%r' ? ([Y]es/[N]o/[E]dit/[A]bort) "
+{% endhighlight %}
 <p align="justify">Disable f#$%ing beep:</p>
-<pre># disable beeps
-unsetopt beep</pre>
+{% highlight bash %}
+# disable beeps
+unsetopt beep
+{% endhighlight %}
 <p align="justify">Enable calculator:</p>
-<pre># calc
-autoload zcalc</pre>
+{% highlight bash %}
+# calc
+autoload zcalc
+{% endhighlight %}
 <p align="justify">Append history (<b>do not recreate</b> the history file):</p>
-<pre># append history
-setopt APPEND_HISTORY</pre>
+{% highlight bash %}
+# append history
+setopt APPEND_HISTORY
+{% endhighlight %}
 <p align="justify">Do not save dups to history file:</p>
-<pre># ignore spaces in history
-setopt HIST_IGNORE_ALL_DUPS</pre>
+{% highlight bash %}
+# ignore spaces in history
+setopt HIST_IGNORE_ALL_DUPS
+{% endhighlight %}
 <p align="justify">...and additional spaces:</p>
-<pre># ignore dups in history
-setopt HIST_IGNORE_SPACE</pre>
+{% highlight bash %}
+# ignore dups in history
+setopt HIST_IGNORE_SPACE
+{% endhighlight %}
 <p align="justify">...and blank lines too:</p>
-<pre># reduce blanks in history
-setopt HIST_REDUCE_BLANKS</pre>
+{% highlight bash %}
+# reduce blanks in history
+setopt HIST_REDUCE_BLANKS
+{% endhighlight %}
 <p align="justify">Enable <code>pkgfile</code>:</p>
-<pre># pkgfile
-source /usr/share/doc/pkgfile/command-not-found.zsh</pre>
+{% highlight bash %}
+# pkgfile
+source /usr/share/doc/pkgfile/command-not-found.zsh
+{% endhighlight %}
 
 <h3><a name="highlighting" class="anchor" href="#highlighting"><span class="octicon octicon-link"></span></a>Syntax highlighting</h2>
-<pre># highlighting
+{% highlight bash %}
+# highlighting
 source /usr/share/zsh/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 ZSH_HIGHLIGHT_HIGHLIGHTERS=(main brackets pattern)
 # brackets
@@ -127,12 +158,14 @@ ZSH_HIGHLIGHT_STYLES[double-quoted-argument]='fg=yellow'
 # pattern example
 #ZSH_HIGHLIGHT_PATTERNS+=('rm -rf *' 'fg=white,bold,bg=red')
 # root example
-#ZSH_HIGHLIGHT_STYLES[root]='bg=red'</pre>
+#ZSH_HIGHLIGHT_STYLES[root]='bg=red'
+{% endhighlight %}
 <p align="justify">In first line highlighting is turned on. Next main, brackets and pattern highlighting are turned on. Patterns are set below (<code>rm -rf *</code> in the example). Also <code>root</code> and <code>cursor</code> highlighting may be turned on. Colors syntax is understandable, <code>fg</code> is font color, <code>bg</code> is background color.</p>
 
 <h3><a name="prompt" class="anchor" href="#prompt"><span class="octicon octicon-link"></span></a>$PROMPT and $RPROMPT</h2>
 <p align="justify">The general idea is the use single <code>.zshrc</code> for root and normal user:</p>
-<pre># PROMPT && RPROMPT
+{% highlight bash %}
+# PROMPT && RPROMPT
 if [[ $EUID == 0 ]]; then
 # [root@host dir]#
   PROMPT="%{$fg_bold[white]%}[%{$reset_color%}\
@@ -149,20 +182,24 @@ else
 %{$fg_no_bold[green]%}%m %{$reset_color%}\
 %{$fg_bold[yellow]%}%1/%{$reset_color%}\
 %{$fg_bold[white]%}]$ %{$reset_color%}"
-fi</pre>
+fi
+{% endhighlight %}
 
 <p align="justify"><code>fg</code> is font color, <code>bg</code> is background color. <code>_bold</code> and <code>_no_bold</code> regulate the tint. Commands should be in <code>%{ ... %}</code> so they do not appear. Avaible colors are:</p>
-<pre>black
+{% highlight bash %}
+black
 red
 green
 yellow
 blue
 magenta
 cyan
-white</pre>
+white
+{% endhighlight %}
 
 <p align="justify">Avaible variables are:</p>
-<pre>%n  - the username
+{% highlight bash %}
+%n  - the username
 %m  - the computer's hostname (truncated to the first period)
 %M  - the computer's hostname
 %l  - the current tty
@@ -173,10 +210,12 @@ white</pre>
 %D  - system date(YY-MM-DD)
 %d  - the current working directory
 %~  - the same as %d but if in $HOME, this will be replaced by ~
-%1/ - the same as %d but only last directory</pre>
+%1/ - the same as %d but only last directory
+{% endhighlight %}
 
 <p align="justify">RPROMPT (<code>acpi</code> package is necessary):</p>
-<pre>precmd () {
+{% highlight bash %}
+precmd () {
   # battery charge
   function batcharge {
     bat_perc=`acpi | awk {'print $4;'} | sed -e "s/\s//" -e "s/%.*//"`
@@ -197,20 +236,24 @@ white</pre>
 $(batcharge)\
 "%{$fg_bold[white]%}[%{$reset_color%}"\
 $returncode\
-"%{$fg_bold[white]%}]%{$reset_color%}"</pre>
+"%{$fg_bold[white]%}]%{$reset_color%}"
+{% endhighlight %}
 <p align="justify">My RPROMPT shows current time, battery change and last returned code. <code>precmd()</code> is necessary for automatic updating. The construct <code>$(if.true.false)</code> is conditional statement in <code>zsh</code>.</p>
 
 <h3><a name="aliases" class="anchor" href="#aliases"><span class="octicon octicon-link"></span></a>Aliases</h2>
 <p align="justify"><b>Copy only those aliases that you need.</b> If any alias uses application that is not installed it will leads to fail of loading of configuration file.</p>
 
 <p align="justify">Small useful (or maybe not) function:</p>
-<pre>show_which() {
+{% highlight bash %}
+show_which() {
   OUTPUT=$(which $1 | cut -d " " -f7-)
   echo "Running '$OUTPUT'" 1>&2
-}</pre>
+}
+{% endhighlight %}
 
 <p align="justify">Here is the first group of aliases:</p>
-<pre>## alias
+{% highlight bash %}
+## alias
 # colored grep
 alias grep='grep --colour=auto'
 # change top to htop
@@ -226,29 +269,35 @@ alias du='show_which du && du -k --total --human-readable'
 alias less='vimpager'
 alias zless='vimpager'
 # more interactive rm
-alias rm='show_which rm && rm -I'</pre>
+alias rm='show_which rm && rm -I'
+{% endhighlight %}
 
 <p align="justify">Here are ls aliases (see <a href="http://unixhelp.ed.ac.uk/CGI/man-cgi?ls">man ls</a>):</p>
-<pre>alias ls='show_which ls && ls --color=auto'
+{% highlight bash %}
+alias ls='show_which ls && ls --color=auto'
 alias ll='show_which ll && ls --group-directories-first -l --human-readable'
 alias lr='show_which lr && ls --recursive'
 alias la='show_which la && ll --almost-all'
 alias lx='show_which lx && ll -X --ignore-backups'
 alias lz='show_which lz && ll -S --reverse'
 alias lt='show_which lt && ll -t --reverse'
-alias lm='show_which lm && la | more'</pre>
+alias lm='show_which lm && la | more'
+{% endhighlight %}
 
 <p align="justify">Here are aliases to quick file view from console (just type a file name!):</p>
-<pre># alias -s
+{% highlight bash %}
+# alias -s
 alias -s {avi,mpeg,mpg,mov,m2v,mkv}=mpv
 alias -s {mp3,flac}=qmmp
 alias -s {odt,doc,xls,ppt,docx,xlsx,pptx,csv}=libreoffice
 alias -s {pdf}=okular
 autoload -U pick-web-browser
-alias -s {html,htm}=opera</pre>
+alias -s {html,htm}=opera
+{% endhighlight %}
 
 <p align="justify">Here are "sudo" aliases:</p>
-<pre># sudo alias
+{% highlight bash %}
+# sudo alias
 if [[ $EUID == 0 ]]; then
   alias fat32mnt='show_which fat32mnt && mount -t vfat -o codepage=866,iocharset=utf8,umask=000'
   alias synctime='show_which synctime && { ntpd -qg; hwclock -w; date; }'
@@ -266,20 +315,24 @@ else
   alias rmmod='show_which rmmod && sudo rmmod'
   alias staging-i686-build='show_which staging-i686-build && sudo staging-i686-build'
   alias staging-x86_64-build='show_which staging-x86_64-build && sudo staging-x86_64-build'
-fi</pre>
+fi
+{% endhighlight %}
 
 <p align="justify">Here are global aliases. If they are enable the command <code>cat foo g bar</code> will be equivalent the command <code>cat foo | grep bar</code>:</p>
-<pre># global alias
+{% highlight bash %}
+# global alias
 alias -g g="| grep"
 alias -g l="| less"
 alias -g t="| tail"
 alias -g h="| head"
-alias -g dn="&> /dev/null &"</pre>
+alias -g dn="&> /dev/null &"
+{% endhighlight %}
 
 <h3><a name="functions" class="anchor" href="#functions"><span class="octicon octicon-link"></span></a>Functions</h2>
 <p align="justify">Here is a special function for <code>xrandr</code>:</p>
 
-<pre># function to contorl xrandr
+{% highlight bash %}
+# function to contorl xrandr
 # EXAMPLE: projctl 1024x768
 projctl () {
   if [ $1 ] ; then
@@ -298,10 +351,12 @@ projctl () {
     echo "Using default resolution"
     xrandr --output VGA1 --mode 1366x768 --output LVDS1 --mode 1366x768
   fi
-}</pre>
+}
+{% endhighlight %}
 
 <p align="justify">Unfortunately I can not remember <code>tar</code> flags thus I use special functions:</p>
-<pre># function to extract archives
+{% highlight bash %}
+# function to extract archives
 # EXAMPLE: unpack file
 unpack () {
   if [[ -f $1 ]]; then
@@ -349,10 +404,12 @@ pack () {
   else
     echo "'$1' is not a valid file"
   fi
-}</pre>
+}
+{% endhighlight %}
 
 <p align="justify">Here is a special function for <code>su</code>:</p>
-<pre>su () {
+{% highlight bash %}
+su () {
   checksu=0
   for flags in $*; do
     if [[ $flags == "-" ]]; then
@@ -365,10 +422,12 @@ pack () {
   else
     /usr/bin/su $*
   fi
-}</pre>
+}
+{% endhighlight %}
 
 <p align="justify">Functions with automatic rehash after installing/removing packages are:</p>
-<pre>pacman () {
+{% highlight bash %}
+pacman () {
   /usr/bin/sudo /usr/bin/pacman $* && echo "$*" | grep -q "S\|R\|U" && rehash
 }
 yaourt () {
@@ -377,28 +436,33 @@ yaourt () {
 # for testing repo
 yatest () {
   /usr/bin/yaourt --config /etc/pactest.conf $* && echo "$*" | grep -q "S\|R\|U" && rehash
-}</pre>
+}
+{% endhighlight %}
 <p align="justify">But autocomplete for <code>yaourt -Ss</code> <a href="https://github.com/zsh-users/zsh-completions/pull/205">will require</a> root privileges.</p>
 
 <h3><a name="variables" class="anchor" href="#variables"><span class="octicon octicon-link"></span></a>Variables</h2>
 <p align="justify">It is recommended to set own variables in <code>~/.zshenv</code>. But I have everything stored in the single file.</p>
 
 <p align="justify">Here are path, mask of new files, editor and pager:</p>
-<pre># path
+{% highlight bash %}
+# path
 export PATH="$PATH:$HOME/.local/bin"
 # umask
 umask 022
 # editor
 export EDITOR="vim"
-export PAGER="vimpager"</pre>
+export PAGER="vimpager"
+{% endhighlight %}
 
 <p align="justify">Here is hashes. If they are enable the command <code>~global</code> will be equivalent the command <code>/mnt/global</code>:</p>
-<pre># hash
+{% highlight bash %}
+# hash
 hash -d global=/mnt/global
 hash -d windows=/mnt/windows
 hash -d iso=/mnt/iso
 hash -d u1=/mnt/usbdev1
-hash -d u2=/mnt/usbdev2</pre>
+hash -d u2=/mnt/usbdev
+{% endhighlight %}
 
 <h3><a name="screenshot" class="anchor" href="#screenshot"><span class="octicon octicon-link"></span></a>Screenshot</h2>
 <p align="justify"><a href="/resources/screenshots/zshrc_demo.png"><img src="/resources/preview/zshrc_demo_prev.jpg"></a></p>
