--- a/about.html
+++ b/about.html
@@ -35,7 +35,9 @@ The Trusted User (TU) is a member of the community charged with keeping the AUR 
 <p align="right">&copy; <a href="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/">ArchWiki</a></p>
 
 <p align="justify">All contact information can be found on the left. Feel free to contact me with any questions. Oh, wait! If you will write me to ICQ or jabber you must correctly answer antispam bot's question first. The question is:</p>
-<pre><code>int i = 1;
+{% highlight c %}
+int i = 1;
 i = ++i + ++i;
-return i;</code></pre>
+return i;
+{% endhighlight %}
 <p align="justify">And the correct answer is <code>5</code> (or <code>6</code>, as you wish).</p>
