--- a/authors.html
+++ b/authors.html
@@ -14,24 +14,19 @@ title: Authors
 
 <p align="justify">The code and content of this site is licensed under <a href="http://people.freebsd.org/~phk">Beerware</a> license:</p>
 <blockquote><p align="justify">"THE BEER-WARE LICENSE" (Revision 42):<br>
-Evgeniy Alekseev wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return</p></blockquote>
-
-<p align="justify">The source theme was created by <a href="https://github.com/orderedlist/minimal">Steve Smith</a> and licensed under <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution-ShareAlike 3.0 Unported</a> License.</p>
-
-<p align="justify">The comment block was created by <a href="https://github.com/izuzak/izuzak.github.com">Ivan Žužak</a> and licensed under <a href="http://opensource.org/licenses/MIT">MIT</a> License.</p>
-
-<p align="justify">The spoiler block was created by <a href="http://www.cyberforum.ru/post5368179.html">markeley</a> and it looks like it has no any license.</p>
+Evgeniy Alekseev wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return.</p></blockquote>
 
 <p align="justify">This site uses:
-<ul>
-  <li><a href="http://jekyllrb.com/">Jekyll</a> that licensed under <a href="http://opensource.org/licenses/MIT">MIT</a> License</li>
-</ul></p>
-
-<p align="justify">Google Custom Search is licensed under own custom <a href="https://support.google.com/customsearch/answer/1714300">license</a>.</p>
-
-<p align="justify">Sharethis have own custom <a href="http://www.sharethis.com/legal/publisher-terms-of-use">license</a> too.</p>
-
-<p align="justify"><a href="https://www.redhat.com/promo/fonts/">Liberation font</a> is licensed under <a href="http://scripts.sil.org/OFL">The SIL Open Font</a> License.</p>
+  <ul>
+    <li><a href="http://jekyllrb.com/">Jekyll</a> that licensed under <a href="http://opensource.org/licenses/MIT">MIT License</a>.</li>
+    <li>The source theme was created by <a href="https://github.com/orderedlist/minimal">Steve Smith</a> and licensed under <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</li>
+    <li>The comment block was created by <a href="https://github.com/izuzak/izuzak.github.com">Ivan Žužak</a> and licensed under <a href="http://opensource.org/licenses/MIT">MIT License</a>.</li>
+    <li>The spoiler block was created by <a href="http://www.cyberforum.ru/post5368179.html">markeley</a> and it looks like it has no any license.</li>
+    <li>Google Custom Search is licensed under own <a href="https://support.google.com/customsearch/answer/1714300">custom license</a>.</li>
+    <li>Sharethis have own <a href="http://www.sharethis.com/legal/publisher-terms-of-use">custom license</a> too.</li>
+    <li><a href="https://www.redhat.com/promo/fonts/">Liberation font</a> is licensed under <a href="http://scripts.sil.org/OFL">The SIL Open Font License</a>.</li>
+  </ul>
+</p>
 
 <p align="justify">Special thanks to <a href="http://monztruo.deviantart.com/">Monztruo</a>, I borrowed <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946">his icon</a>.</p>
 
