--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -37,21 +37,29 @@ links:
 <ul>
   <li><p align="justify">Download an <a href="https://github.com/arcan1s/pytextmonitor/releases">archive</a> with latest version of source files.</p></li>
   <li><p align="justify">Extract it and install the DataEngine:</p>
-<pre>cd /where/is/applet/
+{% highlight bash %}
+cd /where/is/applet/
 mkdir build && cd build
 cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --localprefix` -DCMAKE_BUILD_TYPE=Release ../
 make
-make install</pre>
+make install
+{% endhighlight %}
 <p align="justify">For global isntallation type:</p>
-<pre>cd /where/is/applet/
+{% highlight bash %}
+cd /where/is/applet/
 mkdir build && cd build
 cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --prefix` -DCMAKE_BUILD_TYPE=Release ../
 make
-sudo make install</pre></li>
+sudo make install
+{% endhighlight %}</li>
   <li><p align="justify">Install the Plasmoid:</p>
-<pre>plasmapkg -i py-text-monitor-1.5.0.plasmoid</pre>
+{% highlight bash %}
+plasmapkg -i py-text-monitor-1.5.0.plasmoid
+{% endhighlight %}
 <p align="justify">For global isntallation type:</p>
-<pre>sudo plasmapkg -g -i py-text-monitor-1.5.0.plasmoid</pre></li>
+{% highlight bash %}
+sudo plasmapkg -g -i py-text-monitor-1.5.0.plasmoid
+{% endhighlight %}</li>
 </ul>
 
 <h3><a name="dependencies" class="anchor" href="#dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h3>
