--- a/ru/projects/queued.html
+++ b/ru/projects/queued.html
@@ -14,7 +14,8 @@ links:
 <!-- info block -->
 <h2><a name="info" class="anchor" href="#info"><span class="octicon octicon-link"></span></a>Информация</h2>
 <p align="justify">Демон для запуска задач в очередь вычислений. Был создан, как proof-of-concept.</p>
-<pre>$ queued --help
+{% highlight bash %}
+$ queued --help
 Simple daemon written on BASH for starting jobs to queue of calculations
 
 Usage: queued [ -c /etc/queued.conf ] [ -v | --version ] [ -h | --help ]
@@ -22,15 +23,18 @@ Parametrs:
   -c               PATH     - path to configuration file. Default is '/etc/queued.conf'
 
   -v   --version            - show version and exit
-  -h   --help               - show this help and exit</pre>
-<pre>$ add_queued --help
+  -h   --help               - show this help and exit
+{% endhighlight %}
+{% highlight bash %}
+$ add_queued --help
 add_queued [ -c /etc/queued.conf ] [ -p NUM ] [ -u USER ] [ -h | --help ] /path/to/script
 
 Parameters:
     -c               PATH     - path to configuration file. Default is '/etc/queued.conf'
     -p               NUM      - job priority
     -u               USER     - username
-    -h   --help               - show this help and exit</pre>
+    -h   --help               - show this help and exit
+{% endhighlight %}
 
 <h3><a name="devel" class="anchor" href="#devel"><span class="octicon octicon-link"></span></a>Разработчики</h3>
 <ul>
@@ -52,9 +56,13 @@ Parameters:
 <ul>
   <li><p align="justify">Скачайте <a href="https://github.com/arcan1s/queued/releases">архив</a> с актуальной версией исходных файлов.</p></li>
   <li><p align="justify">Извлеките из него файлы и установите приложение:</p>
-<pre>./install.sh "/путь/к/корню/"</pre>
+{% highlight bash %}
+./install.sh "/путь/к/корню/"
+{% endhighlight %}
 <p align="justify">Если Вы хотите установить в <code>/</code>, Вы должны запустить это, как root:</p>
-<pre>sudo ./install.sh</pre>
+{% highlight bash %}
+sudo ./install.sh
+{% endhighlight %}
 <p align="justify">Если путь не указан, пакет будет установлен в <code>/</code>.</p></li>
 </ul>
 
@@ -69,17 +77,29 @@ Parameters:
 <!-- howto block -->
 <h2><a name="howto" class="anchor" href="#howto"><span class="octicon octicon-link"></span></a>Использование</h2>
 <p align="justify">Если Вы хотите запустить демон, просто запустите</p>
-<pre>systemctl start queued</pre>
+{% highlight bash %}
+systemctl start queued
+{% endhighlight %}
 <p align="justify">Если Вы хотите включить автозагрузку демона, запутите</p>
-<pre>systemctl enable queued</pre>
+{% highlight bash %}
+systemctl enable queued
+{% endhighlight %}
 <p align="justify">Но Вы можете изменить путь к конфигурационному файлу или изменить параметры. Для этого, скопируйте (рекомендуется) исходный конфигурационный файл</p>
-<pre>cp /etc/queued.conf /новый/путь/к/queued.conf</pre>
+{% highlight bash %}
+cp /etc/queued.conf /новый/путь/к/queued.conf
+{% endhighlight %}
 <p align="justify">и отредактируйте его. Затем скопируйте исходный service-файл в <code>/etc</code>:</p>
-<pre>cp /usr/lib/systemd/system/queued.service /etc/systemd/system/queued-my-profile.service</pre>
+{% highlight bash %}
+cp /usr/lib/systemd/system/queued.service /etc/systemd/system/queued-my-profile.service
+{% endhighlight %}
 <p align="justify">Замените следующую строку в этом файле:</p>
-<pre>ExecStart=/usr/bin/queued</pre>
+{% highlight bash %}
+ExecStart=/usr/bin/queued
+{% endhighlight %}
 <p align="justify">на</p>
-<pre>ExecStart=/usr/bin/queued -c /path/to/new/queued.conf</pre>
+{% highlight bash %}
+ExecStart=/usr/bin/queued -c /path/to/new/queued.conf
+{% endhighlight %}
 
 <h3><a name="adding" class="anchor" href="#adding"><span class="octicon octicon-link"></span></a>Добавление задачи</h3>
 <ol>
@@ -92,7 +112,9 @@ Parameters:
 
 <h2><a name="configuration" class="anchor" href="#configuration"><span class="octicon octicon-link"></span></a>Настройка</h2>
 <p align="justify">Все настройки хранятся в <code>/etc/queued.conf</code>. После редактирования, Вы должны перезапустить демон</p>
-<pre>systemctl restart queued</pre>
+{% highlight bash %}
+systemctl restart queued
+{% endhighlight %}
 <!-- end of howto block -->
 
 <!-- config block -->
