small changes in about page

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ title: About me
         <h2>Contacts</h2>
         <p class="view">Alias: arcanis/arcan1s<br>
         IRC: <a href="irc://irc.freenode.net/arcan1s">arcan1s</a><br>
-        ICQ: 407-398-235<br>
+        ICQ: 407-398-235 <img src="http://www.icq.com/scripts/online.dll?icq=407398235&img=27" border="0"><br>
         Jabber: arcanis (at) jabber (dot) ru<br>
         E-mail: <a href="mailto:darkarcanis@mail.ru">darkarcanis (at) mail (dot) ru</a></p>
 
