--- a/ru/about.html
+++ b/ru/about.html
@@ -11,7 +11,7 @@ title: Обо мне
       <header>
         <h1>{{ page.title }}</h1>
 
-        <p class="view">Профиль на <a href="https://github.com/arcan1s">GitHub</a><br>
+        <p class="view"><a href="https://github.com/arcan1s">Профиль на GitHub</a><br>
         <a href="https://www.archlinux.org/trustedusers/#arcanis">Профиль TU на <code>archlinux.org</code></a><br>
         <a href="http://istina.msu.ru/profile/arcanis">Некоторые из моих публикаций</a><br>
         PGP: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01">0x31361F01</a></p>
@@ -19,7 +19,7 @@ title: Обо мне
         <h2>Контакты</h2>
         <p class="view">Никнейм: arcanis/arcan1s<br>
         IRC: <a href="irc://irc.freenode.net/arcan1s">arcan1s</a><br>
-        ICQ: 407-398-235<br>
+        ICQ: 407-398-235 <img src="http://www.icq.com/scripts/online.dll?icq=407398235&img=27" border="0"><br>
         Jabber: arcanis (at) jabber (dot) ru<br>
         E-mail: <a href="mailto:darkarcanis@mail.ru">darkarcanis (at) mail (dot) ru</a></p>
 
