small edit of text + added include/singature - fix bug with russian pages with comments - fix image with eng papers

--- a/ru/projects/index.html
+++ b/ru/projects/index.html
@@ -13,35 +13,35 @@ groups:
             short: deadline
             description: <code>DeadLine widget</code> плазмоид, написанный на <code>Python2</code>. Может создавать задачи и добавлять напоминания к ним. Сейчас этот проект находится в состоянии пре-альфа. Может быть когда-нибудь я доделаю его.
             links:
-                - Репозиторий на <a href="https://github.com/arcan1s/deadlinewidget">GitHub</a>
+                - <a href="https://github.com/arcan1s/deadlinewidget">Репозиторий на GitHub</a>
           - title: Oblikue strategies
             short: oblikuestrategies
             description: <code>oblikue-strategies</code> плазмоид, написанный на <code>CPP</code>, который показывает случайные карты из Brian Eno и Peter Schmidt's <a href="http://en.wikipedia.org/wiki/Oblique_strategies">Oblique Strategies</a>. Это форк <a href="http://gnome-look.org/content/show.php/Oblique+Strategies?content=78405">апплета для GNOME</a> с некоторыми дополнительными фичами.
             links:
                 - <a href="/ru/projects/oblikuestrategies">Домашняя страница</a>
-                - Репозиторий на <a href="https://github.com/arcan1s/oblikuestrategies">GitHub</a>
-                - Страница на <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503">kde-look.org</a>
-                - Пакет в <a href="https://aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies">AUR</a>
+                - <a href="https://github.com/arcan1s/oblikuestrategies">Репозиторий на GitHub</a>
+                - <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503">Страница на kde-look.org</a>
+                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies">Пакет в AUR</a>
           - title: Open on desktop
             short: openondesktop
             description: <code>Open on desktop</code> выпадающее меню для <a href="http://dolphin.kde.org">Dolhpin</a>. Создает группу в контексстном меню, которое позволяет открыть файл на указанном рабочем столе. Имеет установочный скрипт, который написан на <code>Bash</code>.
             links:
-                - Репозиторий на <a href="https://github.com/arcan1s/openondesktop">GitHub</a>
+                - <a href="https://github.com/arcan1s/openondesktop">Репозиторий на GitHub</a>
           - title: py-text-monitor
             short: pytextmonitor
             description: <code>py-text-monitor</code> минималистичный плазмоид, написанный на <code>Python2</code>. Он выглядит, как виджеты в <a href="http://awesome.naquadah.org/">Awesome WM</a>. Мой плазмоид хорошо и легко настраивается и не засоряет Ваш KDE. Также этот пакет имеет дополнительный <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines">DataEngine</a>, который написан на <code>CPP</code> (старые версии были написаны на <code>Python2</code>).
             links:
                 - <a href="/ru/projects/pytextmonitor">Домашняя страница</a>
-                - Репозиторий на <a href="https://github.com/arcan1s/pytextmonitor">GitHub</a>
-                - Страница плазмоида на <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124">kde-look.org</a>
-                - Страница DataEngine на <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773">kde-look.org</a>
-                - Пакет в <a href="https://aur.archlinux.org/packages/kdeplasma-applets-pytextmonitor">AUR</a>
+                - <a href="https://github.com/arcan1s/pytextmonitor">Репозиторий на GitHub</a>
+                - <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124">Страница плазмоида на kde-look.org</a>
+                - <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773">Страница DataEngine на kde-look.org</a>
+                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-pytextmonitor">Пакет в AUR</a>
           - title: Kit system monitor
             short: sysmon
             description: <code>Kit System Monitor</code> системный и хардварный монитор, основанный на EG Sysmon. Написан на языке, похожем на HTML, для <a href="http://netdragon.sourceforge.ne/">SuperKaramba</a> и имеет постой установочный скрипт, написанный на <code>Python2</code>. Это мой первый Open Source проект.
             links:
-                - Репозиторий на <a href="https://github.com/arcan1s/sysmon">GitHub</a>
-                - Страница на <a href="http://kde-look.org/content/show.php/Kit+System+Monitor?content=155246">kde-look.org</a>
+                - <a href="https://github.com/arcan1s/sysmon">Репозиторий на GitHub</a>
+                - <a href="http://kde-look.org/content/show.php/Kit+System+Monitor?content=155246">Страница на kde-look.org</a>
     - title: Демоны
       short: daemons
       projects:
@@ -50,14 +50,14 @@ groups:
             description: <code>git-etc</code> простой демон, который создает git репозиторий в указанной директории и создает коммит в указанный промежуток времени. Он написан на <code>Bash</code>. Также имеет простой графический интерфейс, написанный на <code>Python2</code> (<code>pyqt4</code>) для работы с созданным репозиторием.
             links:
                 - <a href="/ru/projects/git-etc">Домашняя страница</a>
-                - Репозиторий на <a href="https://github.com/arcan1s/git-etc">GitHub</a>
-                - Пакет в <a href="https://aur.archlinux.org/packages/git-etc">AUR</a>
+                - <a href="https://github.com/arcan1s/git-etc">Репозиторий на GitHub</a>
+                - <a href="https://aur.archlinux.org/packages/git-etc">Пакет в AUR</a>
           - title: queued
             short: queued
             description: <code>queued</code> демон для старта задач в очередь вычислений. Написан на <code>Bash</code>, создан как proof-of-concept.
             links:
                 - <a href="/ru/projects/queued">Домашняя страница</a>
-                - Репозиторий на <a href="https://github.com/arcan1s/queued">GitHub</a>
+                - <a href="https://github.com/arcan1s/queued">Репозиторий на GitHub</a>
     - title: Научные программы
       short: science
       projects:
@@ -66,7 +66,7 @@ groups:
             description: Они представлены единственный репозиторием. Содержит некоторые программы для анализа молекулярно-динамических траекторий, используя методы статистической механики и некоторые математические (например, теория графов). Обычно, бекенд программы написаны на <code>C</code>, хотя иногда и на <code>Python2</code>. Некоторые из них имеют графический интерфейс, написанный на <code>CPP</code>.
             links:
                 - <a href="/ru/projects/moldyn">Домашняя страница</a>
-                - Репозиторий на <a href="https://github.com/arcan1s/moldyn">GitHub</a>
+                - <a href="https://github.com/arcan1s/moldyn">Репозиторий на GitHub</a>
     - title: Утилиты
       short: utilities
       projects:
@@ -74,18 +74,18 @@ groups:
             short: extpkg
             description: <code>extract_pkglist</code> простой скрипт, написанный на <code>Python2</code> для создания списка установленных пакетов в ArchLinux.
             links:
-                - Репозиторий на <a href="https://github.com/arcan1s/extract_pkglist">GitHub</a>
+                - <a href="https://github.com/arcan1s/extract_pkglist">Репозиторий на GitHub</a>
           - title: Food GUI
             short: foodgui
             description: <code>Food GUI</code> простая программа-калькулятор, использующая собственную базу данных. Написана на <code>Python2</code>. Рассчитывает белки, жиры и углеводы, а также калорийность и гликемический индекс съеденной пищи. Это мой первый проект с графическим интерфейсом и был написан just-for-fun (и для моей бывшей девушки). Также имеет бинарную версию под Win64.
             links:
-                - Репозиторий на <a href="https://github.com/arcan1s/food_gui">GitHub</a>
-                - Пакет в <a href="https://aur.archlinux.org/packages/food_gui">AUR</a>
+                - <a href="https://github.com/arcan1s/food_gui">Репозиторий на GitHub</a>
+                - <a href="https://aur.archlinux.org/packages/food_gui">Пакет в AUR</a>
           - title: julius-actions
             short: julius-actions
             description: <code>julius-actions</code> Скрипт, написанный на <code>Python2</code> для работы с <a href="http://julius.sourceforge.jp/en_index.php">julius</a>. Был сделан just-for-fun в мое свободное время. Работает нормально, но я им не пользуюсь.
             links:
-                - Репозиторий на <a href="https://github.com/arcan1s/julius-actions">GitHub</a>
+                - <a href="https://github.com/arcan1s/julius-actions">Репозиторий на GitHub</a>
 ---
   <body>
     <div class="wrapper">
