--- a/projects/index.html
+++ b/projects/index.html
@@ -14,7 +14,7 @@ groups:
             links:
                 - <a href="/projects/git-etc">Homepage</a>
                 - <a href="https://github.com/arcan1s/git-etc">GitHub repo</a>
-                - Archlinux <a href="https://aur.archlinux.org/packages/git-etc">AUR package</a>
+                - <a href="https://aur.archlinux.org/packages/git-etc">Archlinux AUR package</a>
           - title: queued
             short: queued
             description: <code>queued</code> is daemon for starting jobs to queue of calculations. It was written on <code>Bash</code> created as proof-of-concept.
@@ -35,8 +35,8 @@ groups:
             links:
                 - <a href="/projects/oblikuestrategies">Homepage</a>
                 - <a href="https://github.com/arcan1s/oblikuestrategies">GitHub repo</a>
-                - Page on <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503">kde-look.org</a>
-                - Archlinux <a href="https://aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies">AUR package</a>
+                - <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503">Page on kde-look.org</a>
+                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies">Archlinux AUR package</a>
           - title: Open on desktop
             short: openondesktop
             description: <code>Open on desktop</code> is a dropbox menu for <a href="http://dolphin.kde.org">Dolhpin</a>. It creates a group in the context menu, which opens a file to the specified desktop when clicked. It has an install script written on <code>Bash</code>.
@@ -48,15 +48,15 @@ groups:
             links:
                 - <a href="/projects/pytextmonitor">Homepage</a>
                 - <a href="https://github.com/arcan1s/pytextmonitor">GitHub repo</a>
-                - Plasmoid page on <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124">kde-look.org</a>
-                - DataEngine page on <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773">kde-look.org</a>
-                - Archlinux <a href="https://aur.archlinux.org/packages/kdeplasma-applets-pytextmonitor">AUR package</a>
+                - <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124">Plasmoid page on kde-look.org</a>
+                - <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773">DataEngine page on kde-look.org</a>
+                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-pytextmonitor">Archlinux AUR package</a>
           - title: Kit system monitor
             short: sysmon
             description: <code>Kit System Monitor</code> is a system information and hardware monitor based on EG Sysmon. It is written on HTML-like language for <a href="http://netdragon.sourceforge.ne/">SuperKaramba</a> and has simple install script written on <code>Python2</code>. It is my first Open Source Project.
             links:
                 - <a href="https://github.com/arcan1s/sysmon">GitHub repo</a>
-                - Page on <a href="http://kde-look.org/content/show.php/Kit+System+Monitor?content=155246">kde-look.org</a>
+                - <a href="http://kde-look.org/content/show.php/Kit+System+Monitor?content=155246">Page on kde-look.org</a>
     - title: Scientific programs
       short: science
       projects:
@@ -79,7 +79,7 @@ groups:
             description: <code>Food GUI</code> is a simple program-calculator that uses own database and written on <code>Python2</code>. It calculates proteins, fats, carbohydrates, food energy and glycemic index of eaten food. It is my first project with GUI and was made just-for-fun (and for my ex-girlfriend). It also has a binary version for Win64.
             links:
                 - <a href="https://github.com/arcan1s/food_gui">GitHub repo</a>
-                - Archlinux <a href="https://aur.archlinux.org/packages/food_gui">AUR package</a>
+                - <a href="https://aur.archlinux.org/packages/food_gui">Archlinux AUR package</a>
           - title: julius-actions
             short: julius-actions
             description: <code>julius-actions</code> is a script written on <code>Python2</code> for work with <a href="http://julius.sourceforge.jp/en_index.php">julius</a>. It was made just-for-fun too in my spare time. Works normally, but I don't use it.
